# health-care-iot-example-impl

./: .gitignore  README.md
c/: CMakeLists.txt
c/bloodpressuresensor/: CMakeLists.txt
c/bloodpressuresensor/src/: BloodPressureSensor.c  BloodPressureSensorHandler.c  BloodPressureSensorHandler.h  main.c
c/bloodpressuresensor/src/platform-include/: fogPlatform.h
c/common/: CMakeLists.txt
c/common/src/: BasalRate.c  BasalRate.h  BasalRate_private.h  BloodPressure.c  BloodPressure.h  BloodPressureSensor.h  BloodPressure_private.h  BloodSugarLevel.c  BloodSugarLevel.h  BloodSugarLevel_private.h  BloodSugarSensor.h  BodyTemperature.c  BodyTemperature.h  BodyTemperature_private.h  Bolus.c  Bolus.h  Bolus_private.h  ErrorSimulator.c  ErrorSimulator.h  HeartRateSensor.h  HttpServer.c  HttpServer.h  InsulinPump.h  InsulinPumpState.c  InsulinPumpState.h  InsulinPumpState_private.h  Random.c  Random.h  TemperatureSensor.h  TreatmentPlan.c  TreatmentPlan.h  TreatmentPlan_private.h
c/heartratesensor/: CMakeLists.txt
c/heartratesensor/src/: HeartRateSensor.c  HeartRateSensorHandler.c  HeartRateSensorHandler.h  main.c
c/heartratesensor/src/platform-include/: fogPlatform.h
c/temperaturesensor/: CMakeLists.txt
c/temperaturesensor/src/: TemperatureSensor.c  TemperatureSensorHandler.c  TemperatureSensorHandler.h  main.c
c/temperaturesensor/src/platform-include/: fogPlatform.h
java/: pom.xml
java/bloodsugarsensor/: pom.xml
java/bloodsugarsensor/src/main/resources/: application.yml
java/common/: pom.xml
java/healthcare/: pom.xml
java/insulinpump/: pom.xml
(+58 files in other folders)
